# Video-Downloader

./: .gitignore  README.md  db.py  main.py  pyproject.toml  sample_links  url_dump.py  video_downloader.sqlite  videos.xlsx  youtube_links.sqlite
.github/workflows/: poetry-install.yml
common/: __init__.py  config.py  db.py  language_en.py
cron/: example1.py  example2.py  example3.sh  sample_cron.txt
db/: config.py  db.py
temp/gh/: .Arhan 4.png.icloud
temp/gh/gh secret/: .gh.png.icloud
url_dump/: __init__.py  db.py  file.py  main.py  url_dump.py
url_dump/includes/: __init__.py  data.py  errors.py  functions.py
video_download/: main.py  video_download.py
video_download/includes/: __init__.py  errors.py  functions.py
video_downloader/: __init__.py
