[tool.poetry]
name = "video-downloader"
version = "0.1.0"
description = ""
authors = ["Arhan Busam <arhan.busam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"
tabulate = "^0.8.7"
youtube_dl = "^2021.2.22"
requests = "^2.25.1"
pylint = "^2.7.2"
black = "^20.8b1"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
url_dump = "url_dump.url_dump:readURLs"
video_download = "video_download.video_download:start"